# python-imgcat

./: .travis.yml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  pypi-release.yml
imgcat/: __init__.py  __main__.py  imgcat.py  ipython_magic.py  iterm2.py  kitty.py  mpl_backend.py  test_imgcat.py
